@@ -1,4 +1,8 @@
 2013-04-13  Roland Winkler  <winkler@gnu.org>
+	* lisp/bbdb-com.el (bbdb-merge-records): Fix docstring.  Merge
+	also affixes.  Do not enforce multi-line layout for display.
+
+2013-04-13  Roland Winkler  <winkler@gnu.org>
 	* lisp/bbdb.el (bbdb-format-address-default, bbdb-format-address):
 	Allow city, postcode, state, and country to be nil.
 
